IEfix z-index bug

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -52,9 +52,9 @@ h1,h2,h3,h4,h5,h6 { color: #333; font-family:'Arvo', arial, serif !important; }
 #header .logo {
   position: relative;
   top:-18px;
-  z-index:900;
+  z-index:9999;
 }
-#header .logo img{z-index:100;}
+#header .logo div{position:absolute;z-index:1000;}
 #header a.twitter span {
   background:url("../images/icon_twitter.png") no-repeat 0 0;
   position:absolute;
